--- a/node-app/.env.example
+++ b/node-app/.env.example
@@ -5,11 +5,11 @@ APP_ENV=production
 APP_URL=http://127.0.0.1:9000
 
 DB_CONNECTION=mysql
-DB_HOST=52.77.224.252
-DB_PORT=3306
+DB_HOST=127.0.0.1
+DB_PORT=3320
 DB_DATABASE=release_tool
 DB_USERNAME=root
-DB_PASSWORD=infra911pw
+DB_PASSWORD=dev*I(O)P
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD="qzFxccNNWk"
